# cpp-project-template

./: .CMakeLists.txt.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: addFun.h  lib_operate.h
lib/: CMakeLists.txt  hello.c
src/: .main.c.swp  addFun.c  main.c
tools/: cMakeClean.sh
